fix task description z-index

--- a/src/assets/design-material/style/helpers/global-class.css
+++ b/src/assets/design-material/style/helpers/global-class.css
@@ -18,6 +18,7 @@
     flex-direction: column;
     min-width: 360px;
     height: 100%;
+    z-index: 11;
 }
 
 @media (max-width: 1024px) {
